@@ -1,2 +1,0 @@
-mag-ui option has bug with the toolbar
-rewrite object linking
